test/corpus/bugs

==================
multiline comment bug1
==================

 <* aaaaa *>

b : one of c <* *> . 

---

(policyspace 
	(comment) 
	(slot 
		(identifier (identifier_value)) 
		(atomic_values 
			(identifier (identifier_value))) 
		(comment)))

    
==================
multiline comment bug2
==================

 <*   
  a*>

b : one of c <*
 *> .

---

(policyspace 
	(comment) 
	(slot 
		(identifier (identifier_value)) 
		(atomic_values 
			(identifier (identifier_value))) 
		(comment)))


====================================
aggregate slot with descriptions bug1
====================================

myslot[descriptions1] : some of somethingElse [else thingy].

---
(policyspace (slot (identifier (identifier_value) (description)) (aggregate_values (identifier (identifier_value) (description)))))
