test/corpus/description.txt
==================
bad comment 1
==================

myslot [bad comment]] : one of aaa .

---
(policyspace 
    (slot 
        (identifier_with_desc 
            (identifier_simple) 
            (description)) 
        (ERROR (UNEXPECTED  ']')) 
        (atomic_values (identifier_simple))))


==================
special chars
==================

myslot [.,~?!()@:$%^&*_+-)+] : one of aaa .

---
(policyspace 
    (slot 
        (identifier_with_desc 
            (identifier_simple) 
            (description)) 
        (atomic_values 
            (identifier_simple))))


==================
special chars 2
==================

myslot ["/#'] : one of aaa .

---
(policyspace 
    (slot 
        (identifier_with_desc 
            (identifier_simple) 
            (description)) 
        (atomic_values 
            (identifier_simple))))




==================
illegal chars 1
==================

myslot : one of A [;].

---
(policyspace (slot (identifier_simple) (atomic_values (identifier_simple)) 
(ERROR (UNEXPECTED ';'))))
            
==================
illegal chars 2
==================

myslot : one of A [`].

---
(policyspace (slot (identifier_simple) (atomic_values (identifier_simple)) 
(ERROR (UNEXPECTED '`'))))

==================
illegal chars 3
==================

myslot : one of A [|].

---
(policyspace (slot (identifier_simple) (atomic_values (identifier_simple)) 
(ERROR (UNEXPECTED '|'))))

==================
illegal chars 4
==================

myslot : one of A [<].

---
(policyspace (slot (identifier_simple) (atomic_values (identifier_simple)) 
(ERROR (UNEXPECTED '<'))))

==================
illegal chars 5
==================

myslot : one of A [>].

---
(policyspace (slot (identifier_simple) (atomic_values (identifier_simple)) 
(ERROR (UNEXPECTED '>'))))

==================
illegal chars 6
==================

myslot : one of A [=].

---
(policyspace (slot (identifier_simple) (atomic_values (identifier_simple)) 
(ERROR (UNEXPECTED '='))))

==================
illegal chars 7
==================

myslot : one of A [<].

---
(policyspace (slot (identifier_simple) (atomic_values (identifier_simple)) 
(ERROR (UNEXPECTED '<'))))


==================
illegal chars 8
==================

myslot : one of A [\\].

---
(policyspace (slot (identifier_simple) (atomic_values (identifier_simple)) 
(ERROR (UNEXPECTED '\'))))
