test/corpus/error.txt
==================
description instead of slot name
==================

[myslot] : one of aaa .

---
(policyspace (ERROR (description) (UNEXPECTED 'a')))

==================
missing value
==================

myslot : one of .

---
(policyspace (slot (identifier_simple) (atomic_values (MISSING identifier_simple))))

==================
missing dot
==================

myslot : one of those

---
(policyspace (slot (identifier_simple) (atomic_values (identifier_simple)) (MISSING ".")))


====================================
missing comma
====================================

myslot[descriptions1] : some of something somethingElse.

---
(policyspace 
    (slot 
        (identifier_with_desc 
            (identifier_simple) 
            (description)) 
        (aggregate_values 
            (identifier_simple)) 
        (ERROR (UNEXPECTED 't'))))
