test/corpus/references.txt
====================================
atomic reference 1
====================================

Storage: one of clear, serverEncrypt, clientEncrypt, doubleEncrypt.

---
(policyspace (slot (identifier (identifier_value)) (atomic_values (identifier (identifier_value)) (identifier (identifier_value)) (identifier (identifier_value)) (identifier (identifier_value)))))

====================================
atomic reference 2
====================================

StorageWithDescription [The way data are stored on the server.]: one of
  clear [Not encrypted at all],
  serverEncrypt [Encryption on the server, "at rest". Attacker cannot use the data by getting the files from the file system],
  clientEncrypt [Encryption on the client side. Data obtained from the server (e.g. buy data breach or subpeona) cannot be used unless the depositor provides the password],
  doubleEncrypt [Encryption on the client, and then on the server. Both passwords are required in order to make use of the data].

---
(policyspace (slot (identifier (identifier_value) (description)) (atomic_values (identifier (identifier_value) (description)) (identifier (identifier_value) (description)) (identifier (identifier_value) (description)) (identifier (identifier_value) (description)))))

====================================
atomic reference 3
====================================

DataSubject_LivingPersons: one of yes, no.
DataSubject_DeadPeople: one of yes, no.
DataSubject_EndangeredSpecies: one of yes, no.
DataSubject_RareMinerals: one of yes, no.

---
(policyspace (slot (identifier (identifier_value)) (atomic_values (identifier (identifier_value)) (identifier (identifier_value)))) (slot (identifier (identifier_value)) (atomic_values (identifier (identifier_value)) (identifier (identifier_value)))) (slot (identifier (identifier_value)) (atomic_values (identifier (identifier_value)) (identifier (identifier_value)))) (slot (identifier (identifier_value)) (atomic_values (identifier (identifier_value)) (identifier (identifier_value)))))

====================================
aggregate reference
====================================

ProtectedDataSubjects: some of livingPersons, deadPeople, endangeredSpecies, rareMinerals.

ProtectedDataSubjectsWithDescription [The type of entities that could be harmed by misuse of the data]: some of
  livingPersons [Living persons - including privacy issues],
  deadPeople [They don't know they're dead],
  endangeredSpecies [Endangered species need protection from poachers],
  rareMinerals [Disclosing location of rare minerals might lead to illegal mining].

---
(policyspace (slot (identifier (identifier_value)) (aggregate_values (identifier (identifier_value)) (identifier (identifier_value)) (identifier (identifier_value)) (identifier (identifier_value)))) (slot (identifier (identifier_value) (description)) (aggregate_values (identifier (identifier_value) (description)) (identifier (identifier_value) (description)) (identifier (identifier_value) (description)) (identifier (identifier_value) (description)))))

====================================
compound reference
====================================

Handling: consists of Storage, Transit, Authentication.

HandlingWithDescription [Practical aspects of the developed dataset policy]: consists of Storage, Transit, Authentication.

---
(policyspace (slot (identifier (identifier_value)) (compound_values (identifier_value) (identifier_value) (identifier_value))) (slot (identifier (identifier_value) (description)) (compound_values (identifier_value) (identifier_value) (identifier_value))))

====================================
aggregate todo
====================================

IntellecualProperty: TODO.

IntellecualPropertyWithDescription [IP issues involving described dataset]: TODO.

---
(policyspace (slot (identifier (identifier_value)) (todo_value)) (slot (identifier (identifier_value) (description)) (todo_value)))
